--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "npx tsc --skipLibCheck",
     "migrate": "node scripts/migrate.js",
     "postinstall": "npm run build"
   },
