--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "npx tsc --skipLibCheck",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "dev": "npm run build && npm start"
   },
   "keywords": [
     "line-bot",
